Stop the loading questions from jumping around

--- a/frontend/src/app/questionnaire-item/questionnaire-item.component.scss
+++ b/frontend/src/app/questionnaire-item/questionnaire-item.component.scss
@@ -44,10 +44,6 @@
         transition: opacity 0.3s ease-in-out;
     }
 
-    &.is-loading .question-filters {
-        display: none;
-    }
-
     &:hover {
         background-color: rgba(202, 201, 201, 0.3);
 
